--- a/src/app/adif-features/consultant-period/consultant-period-home/consultant-period-home.component.html
+++ b/src/app/adif-features/consultant-period/consultant-period-home/consultant-period-home.component.html
@@ -5,32 +5,58 @@
       </div>
     </div>
   <form [formGroup]="consultingPeriodsManagement" (ngSubmit)="consultingPeriodsManagementSubmit()" novalidate>
-    <div class="row">
+   <div class="row">
+
         <div class="col-sm-6">
+
           <mat-form-field appearance="outline">
-              <mat-label>{{'Expediente selection'}}</mat-label>
-              <input matInput [matDatepicker]="periodo"
-                      placeholder="DD / MM / YYYY"
-                      formControlName="periodo"
-                      (focus)="periodo.open()"
-                      [matDatepickerFilter]="firstDayOfMonth">
-              <mat-datepicker-toggle matSuffix [for]="periodo"></mat-datepicker-toggle>
-              <mat-datepicker #periodo></mat-datepicker>
-              <mat-error *ngIf="hasError('periodo', 'required')">{{'Campo obligatorio'}}</mat-error>
-              <mat-error *ngIf="hasError('periodo', 'matDatepickerMin')">{{'Fecha invalida'}}</mat-error>
-            </mat-form-field>
-          </div>
-          <div class="col-sm-6">
-            <mat-form-field  appearance="outline">
+
               <mat-label>Period selection</mat-label>
-              <mat-select id="codigo" formControlName="codigo" (selectionChange)="initialStatus()">
-                <mat-option *ngFor="let codigo of codigo$ | async" [value]="codigo.key.codigo">
-                  {{codigo.key.codigo}}
-                </mat-option>
-              </mat-select>
-              <mat-error *ngIf="hasError('codigo', 'required')">{{'Campo obligatorio'}}</mat-error>
+
+              <input matInput [matDatepicker]="periodo"
+
+                      placeholder="DD / MM / YYYY"
+
+                      formControlName="periodo"
+
+                      (focus)="periodo.open()"
+
+                      [matDatepickerFilter]="firstDayOfMonth">
+
+              <mat-datepicker-toggle matSuffix [for]="periodo"></mat-datepicker-toggle>
+
+              <mat-datepicker #periodo></mat-datepicker>
+
+              <mat-error *ngIf="hasError('periodo', 'required')">{{'Campo obligatorio'}}</mat-error>
+
+              <mat-error *ngIf="hasError('periodo', 'matDatepickerMin')">{{'Fecha invalida'}}</mat-error>
+
             </mat-form-field>
+
           </div>
+
+          <div class="col-sm-6">
+
+            <mat-form-field  appearance="outline">
+
+              <mat-label>Expediente selection</mat-label>
+
+              <mat-select id="codigo" formControlName="codigo" (selectionChange)="initialStatus()">
+
+                <mat-option *ngFor="let codigo of codigo$ | async" [value]="codigo.key.codigo">
+
+                  {{codigo.key.codigo}}
+
+                </mat-option>
+
+              </mat-select>
+
+              <mat-error *ngIf="hasError('codigo', 'required')">{{'Campo obligatorio'}}</mat-error>
+
+            </mat-form-field>
+
+          </div>
+
     </div>
     <div class="row justify-content-center">
       <div class="col-sm-4 text-center">
