--- a/src/app/adif-features/consultant-period/consultant-period-home/consultant-period-home.component.html
+++ b/src/app/adif-features/consultant-period/consultant-period-home/consultant-period-home.component.html
@@ -60,7 +60,8 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-sm-4 text-center">
-          <button mat-raised-button color="primary" class="process">Procesar</button>
+<button mat-raised-button color="primary" class="process" *ngIf="!connectionStatus">Connecting...</button>
+<button mat-raised-button color="primary" class="process" *ngIf="connectionStatus">Procesar</button>
       </div>
     </div>
     <div class="row justify-content-center">
