--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <div class="matMenu" [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon><span>Menu</span></div>
       <mat-menu #menu="matMenu" class="d-block d-lg-none">
         <div class="mat-menu-item" mat-menu-item>
-            <a routerLink="/consultant-periods">Periodo Certificacion</a>
+            <a routerLink="/consultant-periods">Certificacion Expediente</a>
         </div>
       </mat-menu>
   </div>
@@ -23,7 +23,7 @@
             <div><u>PROCESOS</u></div>
             <ul class="nav nav-pills flex-column procesos-group">
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/consultant-periods" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Periodo Certificacion</a>
+                  <a class="nav-link" routerLink="/consultant-periods" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Certificacion Expediente</a>
               </li>
             </ul>
           </li>
