--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
         <div class="mat-menu-item" mat-menu-item>
             <a routerLink="/consultant-periods">Certificacion Expediente</a>
         </div>
+        <div class="mat-menu-item" mat-menu-item>
+            <a href="http://userv-1-2-adifv2.apps.okd.openshifthub.ml">Cierres Contables</a>
+        </div>
       </mat-menu>
   </div>
   <div class="row content">
@@ -24,6 +27,9 @@
             <ul class="nav nav-pills flex-column procesos-group">
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/consultant-periods" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Certificacion Expediente</a>
+              </li>
+              <li class="nav-item">
+                  <a href="http://userv-1-2-adifv2.apps.okd.openshifthub.ml">Cierres Contables</a>
               </li>
             </ul>
           </li>
