--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
                   <a class="nav-link" routerLink="/consultant-periods" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Certificacion Expediente</a>
               </li>
               <li class="nav-item">
-                  <a href="http://userv-1-2-adifv2.apps.okd.openshifthub.ml">Cierres Contables</a>
+                  <a class="nav-link" target="_blank" href="http://userv-1-2-adifv2.apps.okd.openshifthub.ml">Cierres Contables</a>
               </li>
             </ul>
           </li>
