--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 header-content">
-          <div id="header-img"></div>
+        <img src="../assets/images/cabecera.jpg" class="img-responsive img-width" alt="Cabecera">
       </div>
     </div>
   </div>
