--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,11 +6,9 @@ $border-gray: 1px solid lightgray;
 
 #home-header {
     .container {        
-        #header-img {
-            min-height: 120px;
-            background: url(../assets/images/contract.png);
-            background-repeat: no-repeat;
-            background-size: cover;
+        .img-width {
+            width: 100%;
+            height: auto;
         }
         .header-content {
             padding: 0;
