--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 header-content">
-        <img src="../assets/images/cabecera.jpg" class="img-responsive img-width" alt="Cabecera">
+        <img src="../assets/images/capgemini-banner.jpg" class="img-responsive img-width" alt="Cabecera">
       </div>
     </div>
   </div>
@@ -43,7 +43,7 @@
 <footer id="main-footer">
   <div class="container bg-light">
     <div class="row">
-      <div class="col text-right py-3">© 2019 ADIF</div>
+      <div class="col text-right py-3">© 2020 Capgemini</div>
     </div>
   </div>
 </footer>
