--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <div class="matMenu" [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon><span>Menu</span></div>
       <mat-menu #menu="matMenu" class="d-block d-lg-none">
         <div class="mat-menu-item" mat-menu-item>
-            <a href="http://userv-1-2-adifv2.apps.okd.openshifthub.ml">Cierres Contables</a>
+            <a href="http://userv-1-2-adifv2.apps.okd.openshiftorigin.ml">Cierres Contables</a>
         </div>
         <div class="mat-menu-item" mat-menu-item>
             <a routerLink="/consultant-periods">Certificacion Expediente</a>
@@ -26,7 +26,7 @@
             <div><u>PROCESOS</u></div>
             <ul class="nav nav-pills flex-column procesos-group">
               <li class="nav-item">
-                  <a class="nav-link" target="_blank" href="http://userv-1-2-adifv2.apps.okd.openshifthub.ml">Cierres Contables</a>
+                  <a class="nav-link" target="_blank" href="http://userv-1-2-adifv2.apps.okd.openshiftorigin.ml">Cierres Contables</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" routerLink="/consultant-periods" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Certificacion Expediente</a>
